Now under nodejs

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 	<!--CONTAINER-->
 	<div class="container">
 		<h1>
-			<span class="yellow">TeraRave</span>
+			<span class="yellow"><strong>TeraRave</strong></span>
 		</h1>
 		<br />
 		<p>We are currently reaching for the <strong>MOON.</strong> You can check back in:</p>
