--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111558919-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111558919-1');
+</script>
+
+
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>TeraRave || To-launch</title>
 
